--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@sveltejs/adapter-static": "^1.0.0-next.43",
     "@tensorflow/tfjs": "^3.20.0",
     "@tensorflow/tfjs-backend-wasm": "^3.20.0",
+    "comlink": "^4.3.1",
     "svelte-file-dropzone": "^1.0.0"
   }
 }
