--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "type": "module",
   "dependencies": {
+    "@sentry/browser": "^7.16.0",
+    "@sentry/tracing": "^7.16.0",
     "@sveltejs/adapter-static": "^1.0.0-next.44",
     "comlink": "^4.3.1",
     "svelte-file-dropzone": "^1.0.0"
