--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@sentry/tracing": "^7.16.0",
     "@sveltejs/adapter-static": "^1.0.0-next.44",
     "comlink": "^4.3.1",
-    "svelte-file-dropzone": "^1.0.0"
+    "svelte-file-dropzone": "^1.0.0",
+    "svelte-seo": "^1.4.1"
   }
 }
